<?xml version="1.0"?>
<package format="2">
  <name>eye_motion_online</name>
  <version>0.0.1</version>
  <description>eye_motion_online</description>
  <author email="paolo.forin@phd.unipd.it">Paolo Forin</author>
  <maintainer email="paolo.forin@phd.unipd.it">Paolo Forin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <depend>message_generation</depend>

  <depend>rosneuro_msgs</depend>
  <depend>eye_decoder</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
    
</package>
